docs: 修改配置文件注释

--- a/redis-single/redis.conf
+++ b/redis-single/redis.conf
@@ -4,7 +4,7 @@ timeout 300
 loglevel verbose
 dir /data
 requirepass nRLfeO7V7KpUnzO
-# 哨兵或集群时使用
+# 哨兵或集群时使用, 从节点连接主节点的密码
 # masterauth nRLfeO7V7KpUnzO
 dbfilename dump.rdb
 databases 18
