--- a/kafka-kraft/docker-compose.yaml
+++ b/kafka-kraft/docker-compose.yaml
@@ -8,10 +8,11 @@ services:
       # 每个节点的 NODE_ID 不同
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      # @后面可以是地址也可以是主机名
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@10.11.12.60:9093,1@10.11.12.61:9093,2@10.11.12.62:9093
-      # Listeners
+      # @后面可以是地址也可以是主机名 ( 节点 id 必须对应 )
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-01:9093,1@kafka-02:9093,2@kafka-03:9093
+      # 监听地址，不指定地址则为 0.0.0.0
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      # 对外广播地址不指定则使用主机名广播，如果写具体地址则使用实际地址广播到其他节点，不能使用 0.0.0.0
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
@@ -19,7 +20,7 @@ services:
       # Cluster
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
       # 设置 kafka 堆内存限制
-      - KAFKA_HEAP_OPTS=-Xms100m -Xmx1g
+      - KAFKA_HEAP_OPTS=-Xmx1g
     network_mode: host
     # ports:
     #   - 9092:9092
