improvement: 修改挂载目录结构及内存大小

--- a/rocketmq4-3m-3s/rocketmq-namesrv/docker-compose.yaml
+++ b/rocketmq4-3m-3s/rocketmq-namesrv/docker-compose.yaml
@@ -7,10 +7,10 @@ services:
     - mqnamesrv
     restart: always
     environment:
-      JAVA_OPT_EXT: -Xms256m -Xmx1g
+      JAVA_OPT_EXT: -Xms256m -Xmx512m
     network_mode: host
     # ports:
     # - 9876:9876
     volumes:
     - /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro
-    - ./logs:/home/rocketmq/logs
+    - ./rocketmq/logs:/home/rocketmq/logs
