--- a/rocketmq-3m-3s/rocketmq-a-s/docker-compose.yaml
+++ b/rocketmq-3m-3s/rocketmq-a-s/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   rocketmq-a-s:
-    image: apache/rocketmq:4.9.7
+    # image: apache/rocketmq:4.9.7
+    image: apache/rocketmq:5.1.3
     command: 
     - sh
     - mqbroker
