--- a/rocketmq-3m-3s/rocketmq-a-m/docker-compose.yaml
+++ b/rocketmq-3m-3s/rocketmq-a-m/docker-compose.yaml
@@ -1,8 +1,9 @@
 version: '3.8'
 services:
   rocketmq-a-m:
-    # image: apache/rocketmq:4.9.7
-    image: apache/rocketmq:5.1.3
+    image: apache/rocketmq:4.9.7
+    # 不要过早使用高版本, dashboard 和 exporter 还没有适配, 会导致很多 bug
+    # image: apache/rocketmq:5.1.3
     command: 
     - sh
     - mqbroker
