--- a/frp/frpc/frpc.ini
+++ b/frp/frpc/frpc.ini
@@ -3,13 +3,15 @@
 server_addr = x.x.x.x
 server_port = 7100
 
-# 与 frps 配置相同
+# 连接 frps 的 token
 token = JiPJsGPeigQPUUc
+authentication_timeout = 0
+# tcp 端口复用
 tcp_mux = true
 
+# 日志等级
 log_level = info
 log_max_days = 3
-authentication_timeout = 0
 
 [kuboard]
 type = tcp
